--- a/Multiplatform/Localizable.xcstrings
+++ b/Multiplatform/Localizable.xcstrings
@@ -513,6 +513,9 @@
         }
       }
     },
+    "Download" : {
+
+    },
     "download.remove" : {
       "localizations" : {
         "de" : {
